--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,43 @@
-<header class="header">
+<header>
 
-  <div class="site-title">
-    {% if page.title %}
-    <h4 class="entry-title"><a href="{{ page.url }}">{{ page.title }}</a></h4>
-    {% else%}
-    <img src="/images/logo.png" style="width: 42px;" />
-    <a href="/">{{ site.title }}</a>
-    {% endif %}
-  </div>
+<!-- navbar -->
+  <nav class="navbar navbar-inverse">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+      <p class="navbar-text">Front-end Dev Engineer</p>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
 
-<div class="links">
-    {% assign current = page.title %}
-    <a href="/" class="page-link{% if current == null %} active{% endif %}">Blog</a>
-    {% for page in site.pages %}
-    {% if page.title and page.permalink != "/404.html" %}
-      <a class="page-link{% if current == page.title %} active{% endif %}"
-        href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-    {% endif %}
-    {% endfor %}
-    <a href="/feed.xml" target="_blank" class="page-link">RSS</a>
-</div>
+        {% if page.url == "/index.html" %}
+          <li class="active">
+          {% else %}
+          <li>
+        {% endif %}
+          <a href="{{ site.baseurl }}/"><span class="glyphicon glyphicon-th-large"></span> Blog</a></li>
+
+        {% for p in site.pages %}
+          {% if p.title %}
+            {% if p.url == page.url %}
+              <li class="active">
+              {% else %}
+              <li>
+            {% endif %}
+            <a href="{{ p.url | prepend: site.baseurl }}"><span class="glyphicon {{ p.icon }}"></span> {{ p.title }}</a></li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 </header>
